Kubernetes/Certified Kubernetes Administrator (CKA)/8-Services/Lab/Managing Access from Outside with K8s Ingress/web-auth-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-auth-ingress
spec:
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: web-auth-svc
            port:
              #name: you-know-who
              number: 80
